--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,3 +85,18 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./todo/target/release
+
+    - name: Wait for GitHub Pages
+      run: |
+        sleep 60  # Wait for GitHub Pages to deploy
+
+    - name: Verify deployment
+      run: |
+        DEPLOY_URL="https://${{ github.repository_owner }}.github.io/rust-workspace"
+        HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" $DEPLOY_URL)
+        if [ $HTTP_STATUS -eq 200 ]; then
+          echo "✅ Deployment successful! Site is accessible at $DEPLOY_URL"
+        else
+          echo "❌ Deployment verification failed. Status code: $HTTP_STATUS"
+          exit 1
+        fi
