--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,8 +77,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build
-      run: cargo build --release
+    - name: Build and run
+      env:
+        PORT: 80  # Standard HTTP port
+      run: cargo run --release
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
