--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  DATABASE_URL: postgres://postgres:postgres@localhost:5432/todos_test
+  DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/todos_test
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_DB: todos_test
@@ -24,9 +24,9 @@ jobs:
       postgres:
         image: postgres:15-alpine
         env:
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: todos_test
         ports:
           - 5432:5432
         options: >-
@@ -57,48 +57,53 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('todo/Cargo.lock') }}
 
     - name: Run migrations
+      env:
+        DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/todos_test
       run: |
         cargo install diesel_cli --no-default-features --features postgres
         diesel migration run
 
     - name: Run tests
+      env:
+        DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/todos_test
+        RUST_BACKTRACE: 1
       run: |
         cargo test --lib
         cargo test --test integration_tests
 
-  # deploy:
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/main'
-  #   defaults:
-  #     run:
-  #       working-directory: ./todo
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    defaults:
+      run:
+        working-directory: ./todo
 
-  #   steps:
-  #   - uses: actions/checkout@v3
+    steps:
+    - uses: actions/checkout@v3
 
-  #   - name: Build and run
-  #     env:
-  #       PORT: 80  # Standard HTTP port
-  #     run: cargo run --release
+    - name: Build and run
+      env:
+        PORT: 80  # Standard HTTP port
+      run: cargo run --release
 
-  #   - name: Deploy to GitHub Pages
-  #     uses: peaceiris/actions-gh-pages@v3
-  #     with:
-  #       github_token: ${{ secrets.GITHUB_TOKEN }}
-  #       publish_dir: ./todo/target/release
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./todo/target/release
 
-  #   - name: Wait for GitHub Pages
-  #     run: |
-  #       sleep 60  # Wait for GitHub Pages to deploy
+    - name: Wait for GitHub Pages
+      run: |
+        sleep 60  # Wait for GitHub Pages to deploy
 
-  #   - name: Verify deployment
-  #     run: |
-  #       DEPLOY_URL="https://${{ github.repository_owner }}.github.io/rust-workspace"
-  #       HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" $DEPLOY_URL)
-  #       if [ $HTTP_STATUS -eq 200 ]; then
-  #         echo "✅ Deployment successful! Site is accessible at $DEPLOY_URL"
-  #       else
-  #         echo "❌ Deployment verification failed. Status code: $HTTP_STATUS"
-  #         exit 1
-  #       fi
+    - name: Verify deployment
+      run: |
+        DEPLOY_URL="https://${{ github.repository_owner }}.github.io/rust-workspace"
+        HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" $DEPLOY_URL)
+        if [ $HTTP_STATUS -eq 200 ]; then
+          echo "✅ Deployment successful! Site is accessible at $DEPLOY_URL"
+        else
+          echo "❌ Deployment verification failed. Status code: $HTTP_STATUS"
+          exit 1
+        fi
