--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/todos_test
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_DB: todos_test
@@ -24,9 +23,9 @@ jobs:
       postgres:
         image: postgres:15-alpine
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: todos_test
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
         ports:
           - 5432:5432
         options: >-
@@ -43,9 +42,19 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libpq-dev postgresql-client
 
-    - name: Verify PostgreSQL connection
+    - name: Wait for PostgreSQL
       run: |
-        PGPASSWORD=${{ env.POSTGRES_PASSWORD }} psql -h localhost -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }} -c '\l'
+        while ! pg_isready -h localhost -p 5432; do
+          echo "Waiting for PostgreSQL to start..."
+          sleep 1
+        done
+
+    - name: Verify PostgreSQL connection
+      env:
+        PGPASSWORD: ${{ env.POSTGRES_PASSWORD }}
+        DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}
+      run: |
+        psql -h localhost -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }} -c '\l'
 
     - name: Cache dependencies
       uses: actions/cache@v3
@@ -58,14 +67,14 @@ jobs:
 
     - name: Run migrations
       env:
-        DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/todos_test
+        DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}
       run: |
         cargo install diesel_cli --no-default-features --features postgres
         diesel migration run
 
     - name: Run tests
       env:
-        DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/todos_test
+        DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}
         RUST_BACKTRACE: 1
       run: |
         cargo test --lib
