--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,6 +88,21 @@ jobs:
       run:
         working-directory: ./todo
 
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v3
 
@@ -99,18 +114,26 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libpq-dev postgresql-client
 
-    - name: Build
+    - name: Wait for PostgreSQL
+      run: |
+        while ! pg_isready -h localhost -p 5432; do
+          echo "Waiting for PostgreSQL to start..."
+          sleep 1
+        done
+
+    - name: Run migrations
+      env:
+        DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}
+      run: |
+        cargo install diesel_cli --no-default-features --features postgres
+        diesel migration run
+
+    - name: Build and Run
       env:
         PORT: 8080
         DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}
       run: |
         cargo build --release
-
-    - name: Run server
-      env:
-        PORT: 8080
-        DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}
-      run: |
         sudo -E env "PATH=$PATH" cargo run --release
 
     - name: Deploy to GitHub Pages
